Add Revert to Draft and Re-release
* Add DB flag to track if a decision was previously released
* Add new dialog for reverting to draft
* Change release dialog if a decision was previously released

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -87,7 +87,12 @@
               matTooltip="{{ disabledCreateBtnTooltip }}"
               [matTooltipDisabled]="!isPaused && !isDraftExists"
             >
-              <button mat-stroked-button color="primary" (click)="onEdit(decision)" [disabled]="isDraftExists">
+              <button
+                mat-stroked-button
+                color="primary"
+                (click)="onRevertToDraft(decision.uuid)"
+                [disabled]="isDraftExists"
+              >
                 Revert to draft
               </button>
             </div>
