--- a/portal-frontend/src/app/features/view-submission/alc-review/decisions/decisions.component.html
+++ b/portal-frontend/src/app/features/view-submission/alc-review/decisions/decisions.component.html
@@ -13,9 +13,7 @@
 
     <div>
       <div class="subheading2">Decision Outcome</div>
-      {{ decision.isSubjectToConditions ? 'Subject to Conditions' : decision.outcome.label }}
-      {{ decision.modifies?.linkedResolutions?.join(', ') }}
-      {{ decision.reconsiders?.linkedResolutions?.join(', ') }}
+      {{ decision.outcome.label }} {{ decision.isSubjectToConditions ? '- Subject to Conditions' : '' }}
     </div>
 
     <div>
