--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -163,7 +163,7 @@
       </div>
 
       <div>
-        <mat-label class="toggle-label">Stats required</mat-label>
+        <mat-label class="toggle-label">Stats required*</mat-label>
         <mat-button-toggle-group id="isStatsRequired" formControlName="isStatsRequired" name="isStatsRequired">
           <mat-button-toggle value="true">Yes</mat-button-toggle>
           <mat-button-toggle value="false">No</mat-button-toggle>
