--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="agent-form">
-    <h4>Agent Contact Information</h4>
+    <h4>Primary Contact Information</h4>
     <form [formGroup]="form">
       <div class="form-row">
         <div>
