Disable content area interaction if upload not required

--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -30,7 +30,7 @@
   [disabled]="disabled"
   (files)="filesDropped($event)"
 >
-  <button class="content" type="button" (click)="onFileUploadClicked()">
+  <button class="content" type="button" (click)="onFileUploadClicked()" [disabled]="disabled">
     <div class="icon">
       <mat-icon inline="true">file_upload</mat-icon>
     </div>
