--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -19,6 +19,10 @@
 .desktop-file-drag-drop[ng-reflect-disabled='true'] {
   background-color: rgba(colors.$grey, 0.2) !important;
   cursor: not-allowed;
+
+  .content {
+    cursor: not-allowed;
+  }
 }
 
 .mobile-file-drag-drop {
