Use Last Name only for Applicant Names

--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="parcelForm">
+<form [formGroup]="parcelForm" (keydown.enter)="$event.preventDefault()">
   <div class="type">
     <label>Select ownership type:</label>
     <div class="warning">
