Code Review Feedback

--- a/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.scss
@@ -56,7 +56,7 @@
   width: 100%;
 }
 
-::ng-deep .mat-mdc-menu-item .mdc-list-item__primary-text {
+:host::ng-deep .mat-mdc-menu-item .mdc-list-item__primary-text {
   width: 100%;
 }
 
