Add NOI Detail Page
* Add Overview and Intake
* Add more fields to NOIs
* Change Staff Journal to work for all object types

--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -40,7 +40,7 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <app-application-time-tracker [application]="application"></app-application-time-tracker>
+      <app-time-tracker [application]="application"></app-time-tracker>
     </div>
     <div class="right">
       <button matTooltip="Move Board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
