--- a/alcs-frontend/src/app/features/commissioner/commissioner.component.html
+++ b/alcs-frontend/src/app/features/commissioner/commissioner.component.html
@@ -1,6 +1,6 @@
 <div class="layout">
   <div class="application">
-    <app-application-header [application]="application"></app-application-header>
+    <app-details-header [application]="application"></app-details-header>
     <section class="content">
       <app-document
         *ngIf="fileNumber"
