--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -1,10 +1,11 @@
 <div class="layout">
   <div class="application">
-    <app-application-header
+    <app-details-header
       [application]="application"
       [reconsiderations]="reconsiderations"
       [modifications]="modifications"
-    ></app-application-header>
+      heading='Application'
+    ></app-details-header>
     <div class="content">
       <div class="nav">
         <div *ngFor="let route of childRoutes" class="nav-link">
@@ -12,7 +13,7 @@
             *ngIf="route.requiresAuthorization ? isAuthorized : true"
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: route.path === '' ? true : false }"
+            [routerLinkActiveOptions]="{ exact: route.path === '' }"
             class="nav-item"
           >
             <mat-icon>{{ route.icon }}</mat-icon>
