Add FKs Back to Staff Journal

--- a/alcs-frontend/src/app/features/notice-of-intent/overview/overview.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/overview/overview.component.html
@@ -9,7 +9,7 @@
 </section>
 <section>
   <section>
-    <app-staff-journal *ngIf="noticeOfIntent" [parentUuid]="noticeOfIntent.uuid" />
+    <app-staff-journal *ngIf="noticeOfIntent" parentType="NOI" [parentUuid]="noticeOfIntent.uuid" />
   </section>
 </section>
 <section>
