--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.scss
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.scss
@@ -1,6 +1,6 @@
 .owner-information {
   display: grid;
-  grid-template-columns: max-content max-content max-content max-content max-content;
+  grid-template-columns: max-content max-content max-content max-content max-content max-content;
   overflow-x: auto;
   grid-column-gap: 36px;
   grid-row-gap: 12px;
