--- a/portal-frontend/src/app/features/application-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/application-details/parcel/parcel.component.scss
@@ -2,7 +2,7 @@
 
 .owner-information {
   display: grid;
-  grid-template-columns: max-content max-content max-content max-content max-content;
+  grid-template-columns: max-content max-content max-content max-content max-content max-content;
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
